[tool.poetry]
name = "choosesuncatcher"
version = "0.1.0"
description = ""
authors = ["kotbarmaglot <allonewage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.10.0"
vk = "^3.0"

[tool.poetry.scripts]
choosesun = "choosesuncatcher.choosesun:main"
vkchoosesun = "choosesuncatcher.vkchoosesun:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
